[gd_scene load_steps=14 format=3 uid="uid://bwkl6br8k7yx4"]

[ext_resource type="Script" path="res://scripts/memory/memory.gd" id="1_5lp68"]
[ext_resource type="Theme" uid="uid://d0g8s3iunw2w1" path="res://scenes/memory/raetsel_theme.tres" id="2_2kxt3"]
[ext_resource type="StyleBox" uid="uid://buu3vm8g07k1k" path="res://assets/simonsays/paneltexture.tres" id="2_4dvq0"]
[ext_resource type="FontFile" uid="uid://b6ejypfn354pw" path="res://fonts/PressStart2P-Regular.ttf" id="3_1hgq8"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_04dpf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsqx2"]
texture = SubResource("CompressedTexture2D_04dpf")

[sub_resource type="Theme" id="Theme_jeqn5"]
/styles/Panel = SubResource("StyleBoxTexture_xsqx2")
Panel/styles/panel = ExtResource("2_4dvq0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2cvx"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.176471)
shadow_size = 1
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_p2v4r"]
line_spacing = 30.0
font = ExtResource("3_1hgq8")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_ioryq"]
line_spacing = 10.0
font = ExtResource("3_1hgq8")

[sub_resource type="LabelSettings" id="LabelSettings_qbiwv"]
line_spacing = 30.0
font = ExtResource("3_1hgq8")

[sub_resource type="LabelSettings" id="LabelSettings_gsiak"]
line_spacing = 10.0
font = ExtResource("3_1hgq8")

[sub_resource type="LabelSettings" id="LabelSettings_5wqgr"]
line_spacing = 5.0
font = ExtResource("3_1hgq8")

[node name="memory" type="Node2D"]
position = Vector2(67, 63)
script = ExtResource("1_5lp68")

[node name="SceneChangeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnBackTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jeqn5")

[node name="PanelContainerTop" type="PanelContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 444.0
offset_top = 72.0
offset_right = 1473.0
offset_bottom = 266.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g2cvx")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/PanelContainerTop"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="titel" type="Label" parent="CanvasLayer/Panel/PanelContainerTop/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_2kxt3")
text = "Memory"
label_settings = SubResource("LabelSettings_p2v4r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="infobox" type="Label" parent="CanvasLayer/Panel/PanelContainerTop/VBoxContainer"]
layout_mode = 2
text = "Finde alle Paare in diesem 4x5 Memory-Spiel! 
Merke Dir die Positionen der Karten und teste Dein Gedächtnis."
label_settings = SubResource("LabelSettings_ioryq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/PanelContainerTop/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="verbrauchteZuege" type="Label" parent="CanvasLayer/Panel/PanelContainerTop/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"counter"
text = "Übrige Züge:"
label_settings = SubResource("LabelSettings_qbiwv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="counter" type="Label" parent="CanvasLayer/Panel/PanelContainerTop/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_gsiak")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerBottom" type="PanelContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = 132.0
offset_top = 852.0
offset_right = -157.866
offset_bottom = -69.0

[node name="Label" type="Label" parent="CanvasLayer/Panel/PanelContainerBottom"]
layout_mode = 2
text = "<Q> Rätsel abbrechen und Truhe schließen"
label_settings = SubResource("LabelSettings_5wqgr")
horizontal_alignment = 1

[node name="cards" type="Sprite2D" parent="CanvasLayer/Panel"]
position = Vector2(702, 368)

[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="TurnBackTimer" to="." method="_on_turn_back_timer_timeout"]
